--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "zip": "tsx zip.ts"
+    "zip": "tsx server/zip.ts"
   },
   "dependencies": {
     "archiver": "^7.0.1",
